@@ -1,3 +1,6 @@
+2020-09-08
+  tuned up handling of transcript versions
+
 2020-08-26
   downloads the files in compressed format
   added handling of transcript versions (STABLE_TRANSCRIPTS table)
